<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chinh_sua_san_pham"
                android:gravity="center"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:textSize="24sp"
                />
            <EditText
                android:id="@+id/edtProductNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ma_san_pham"
                android:backgroundTint="@color/green"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/edtProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ten_san_pham"
                android:backgroundTint="@color/green"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/edtProduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hang_san_xuat"
                android:backgroundTint="@color/green"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/edtProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gia_ban"
                android:backgroundTint="@color/green"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>
            <ImageView
                android:id="@+id/imvBook"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>
            <Button
                android:id="@+id/btnBookImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="end"
                android:drawableStart="@drawable/ic_baseline_camera_alt_24"
                android:text="@string/chon_anh"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_btn"
                android:backgroundTint="@color/green"
                android:textColor="@color/white"
                android:textAllCaps="false"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">
                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:backgroundTint="@color/yellow"/>
                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/huy_bo"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/yellow"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>